// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContractCard > Snapshot Tests > matches snapshot for contract in danger 1`] = `
<div>
  <div
    class="group overflow-hidden rounded-lg border border-slate-700/50 bg-gradient-to-br from-slate-800/50 to-slate-900/50 p-5 backdrop-blur transition-all duration-200 hover:border-slate-600 hover:shadow-lg hover:shadow-violet-500/10"
  >
    <div
      class="mb-4 flex items-start justify-between gap-4"
    >
      <div
        class="flex flex-1 items-start gap-3"
      >
        <div
          class="rounded-lg bg-blue-500/20 p-2"
        >
          <svg
            class="h-5 w-5 text-blue-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          />
        </div>
        <div
          class="flex-1"
        >
          <h3
            class="line-clamp-1 font-semibold text-slate-100"
          >
            测试项目
          </h3>
          <p
            class="mt-0.5 text-sm text-slate-400"
          >
            测试客户
          </p>
          <p
            class="mt-1 text-xs text-slate-500"
          >
            CONTRACT-001
          </p>
        </div>
      </div>
      <div
        class="flex flex-shrink-0 flex-col items-end gap-1"
      >
        <p
          class="text-lg font-bold text-amber-400"
        >
          ¥1,000,000.00
        </p>
        <p
          class="text-xs text-slate-500"
        >
          合同金额
        </p>
      </div>
    </div>
    <div
      class="mb-4 flex items-center justify-between rounded-lg bg-slate-700/20 px-3 py-2"
    >
      <div
        class="flex items-center gap-1.5"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert h-4 w-4 text-red-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <span
          class="text-xs font-medium text-red-400"
        >
          阻塞
        </span>
      </div>
      <span
        class="text-xs text-slate-400"
      >
        2
        /
        3
         款已到账
      </span>
    </div>
    <div
      class="mb-4 space-y-2"
    >
      <div
        class="flex items-center justify-between"
      >
        <span
          class="text-sm text-slate-400"
        >
          回款进度
        </span>
        <span
          class="text-sm font-medium text-slate-300"
        >
          ¥500,000.00
           /
           
          ¥1,000,000.00
        </span>
      </div>
      <div
        class="h-2 bg-slate-700/50"
        data-testid="progress"
        value="50"
      />
    </div>
    <div
      class="mb-4 space-y-1.5"
    >
      <div
        class="flex items-center justify-between rounded-lg bg-slate-800/30 px-3 py-2.5 text-xs transition-all hover:bg-slate-800/50"
      >
        <div
          class="flex flex-1 items-center gap-3"
        >
          <span
            class="font-medium text-slate-300"
          >
            首付款
          </span>
          <span
            class="text-slate-500"
          >
            |
          </span>
          <span
            class="font-semibold text-slate-200"
          >
            ¥300,000.00
          </span>
        </div>
        <div
          class="text-xs bg-emerald-500/20 text-emerald-400"
          data-testid="badge"
        >
          已到账
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg bg-slate-800/30 px-3 py-2.5 text-xs transition-all hover:bg-slate-800/50"
      >
        <div
          class="flex flex-1 items-center gap-3"
        >
          <span
            class="font-medium text-slate-300"
          >
            进度款
          </span>
          <span
            class="text-slate-500"
          >
            |
          </span>
          <span
            class="font-semibold text-slate-200"
          >
            ¥200,000.00
          </span>
        </div>
        <div
          class="text-xs bg-emerald-500/20 text-emerald-400"
          data-testid="badge"
        >
          已到账
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg bg-slate-800/30 px-3 py-2.5 text-xs transition-all hover:bg-slate-800/50"
      >
        <div
          class="flex flex-1 items-center gap-3"
        >
          <span
            class="font-medium text-slate-300"
          >
            尾款
          </span>
          <span
            class="text-slate-500"
          >
            |
          </span>
          <span
            class="font-semibold text-slate-200"
          >
            ¥500,000.00
          </span>
        </div>
        <div
          class="text-xs bg-slate-700/40 text-slate-400"
          data-testid="badge"
        >
          待回款
        </div>
      </div>
    </div>
    <div
      class="flex flex-wrap gap-2 border-t border-slate-700/30 pt-4"
    >
      <div
        class="text-xs bg-emerald-500/20 text-emerald-400"
        data-testid="badge"
      >
        发票: 
        3
        张
      </div>
      <div
        class="text-xs bg-emerald-500/20 text-emerald-400"
        data-testid="badge"
      >
        ✓ 
        验收:
         
        已完成
      </div>
    </div>
    <div
      class="absolute right-4 top-4 flex gap-1 opacity-0 transition-opacity group-hover:opacity-100"
    >
      <button
        class="h-8 w-8 p-0 text-slate-400 hover:text-slate-100"
        title="查看详情"
        type="button"
      >
        <svg
          class="h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
      </button>
      <button
        class="h-8 w-8 p-0 text-slate-400 hover:text-slate-100"
        title="编辑"
        type="button"
      >
        <svg
          class="h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
      </button>
      <button
        class="h-8 w-8 p-0 text-slate-400 hover:text-slate-100"
        title="下载"
        type="button"
      >
        <svg
          class="h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ContractCard > Snapshot Tests > matches snapshot for contract in good health 1`] = `
<div>
  <div
    class="group overflow-hidden rounded-lg border border-slate-700/50 bg-gradient-to-br from-slate-800/50 to-slate-900/50 p-5 backdrop-blur transition-all duration-200 hover:border-slate-600 hover:shadow-lg hover:shadow-violet-500/10"
  >
    <div
      class="mb-4 flex items-start justify-between gap-4"
    >
      <div
        class="flex flex-1 items-start gap-3"
      >
        <div
          class="rounded-lg bg-blue-500/20 p-2"
        >
          <svg
            class="h-5 w-5 text-blue-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          />
        </div>
        <div
          class="flex-1"
        >
          <h3
            class="line-clamp-1 font-semibold text-slate-100"
          >
            测试项目
          </h3>
          <p
            class="mt-0.5 text-sm text-slate-400"
          >
            测试客户
          </p>
          <p
            class="mt-1 text-xs text-slate-500"
          >
            CONTRACT-001
          </p>
        </div>
      </div>
      <div
        class="flex flex-shrink-0 flex-col items-end gap-1"
      >
        <p
          class="text-lg font-bold text-amber-400"
        >
          ¥1,000,000.00
        </p>
        <p
          class="text-xs text-slate-500"
        >
          合同金额
        </p>
      </div>
    </div>
    <div
      class="mb-4 flex items-center justify-between rounded-lg bg-slate-700/20 px-3 py-2"
    >
      <div
        class="flex items-center gap-1.5"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-check h-4 w-4 text-emerald-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
        <span
          class="text-xs font-medium text-emerald-400"
        >
          正常
        </span>
      </div>
      <span
        class="text-xs text-slate-400"
      >
        2
        /
        3
         款已到账
      </span>
    </div>
    <div
      class="mb-4 space-y-2"
    >
      <div
        class="flex items-center justify-between"
      >
        <span
          class="text-sm text-slate-400"
        >
          回款进度
        </span>
        <span
          class="text-sm font-medium text-slate-300"
        >
          ¥500,000.00
           /
           
          ¥1,000,000.00
        </span>
      </div>
      <div
        class="h-2 bg-slate-700/50"
        data-testid="progress"
        value="50"
      />
    </div>
    <div
      class="mb-4 space-y-1.5"
    >
      <div
        class="flex items-center justify-between rounded-lg bg-slate-800/30 px-3 py-2.5 text-xs transition-all hover:bg-slate-800/50"
      >
        <div
          class="flex flex-1 items-center gap-3"
        >
          <span
            class="font-medium text-slate-300"
          >
            首付款
          </span>
          <span
            class="text-slate-500"
          >
            |
          </span>
          <span
            class="font-semibold text-slate-200"
          >
            ¥300,000.00
          </span>
        </div>
        <div
          class="text-xs bg-emerald-500/20 text-emerald-400"
          data-testid="badge"
        >
          已到账
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg bg-slate-800/30 px-3 py-2.5 text-xs transition-all hover:bg-slate-800/50"
      >
        <div
          class="flex flex-1 items-center gap-3"
        >
          <span
            class="font-medium text-slate-300"
          >
            进度款
          </span>
          <span
            class="text-slate-500"
          >
            |
          </span>
          <span
            class="font-semibold text-slate-200"
          >
            ¥200,000.00
          </span>
        </div>
        <div
          class="text-xs bg-emerald-500/20 text-emerald-400"
          data-testid="badge"
        >
          已到账
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg bg-slate-800/30 px-3 py-2.5 text-xs transition-all hover:bg-slate-800/50"
      >
        <div
          class="flex flex-1 items-center gap-3"
        >
          <span
            class="font-medium text-slate-300"
          >
            尾款
          </span>
          <span
            class="text-slate-500"
          >
            |
          </span>
          <span
            class="font-semibold text-slate-200"
          >
            ¥500,000.00
          </span>
        </div>
        <div
          class="text-xs bg-slate-700/40 text-slate-400"
          data-testid="badge"
        >
          待回款
        </div>
      </div>
    </div>
    <div
      class="flex flex-wrap gap-2 border-t border-slate-700/30 pt-4"
    >
      <div
        class="text-xs bg-emerald-500/20 text-emerald-400"
        data-testid="badge"
      >
        发票: 
        3
        张
      </div>
      <div
        class="text-xs bg-emerald-500/20 text-emerald-400"
        data-testid="badge"
      >
        ✓ 
        验收:
         
        已完成
      </div>
    </div>
    <div
      class="absolute right-4 top-4 flex gap-1 opacity-0 transition-opacity group-hover:opacity-100"
    >
      <button
        class="h-8 w-8 p-0 text-slate-400 hover:text-slate-100"
        title="查看详情"
        type="button"
      >
        <svg
          class="h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
      </button>
      <button
        class="h-8 w-8 p-0 text-slate-400 hover:text-slate-100"
        title="编辑"
        type="button"
      >
        <svg
          class="h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
      </button>
      <button
        class="h-8 w-8 p-0 text-slate-400 hover:text-slate-100"
        title="下载"
        type="button"
      >
        <svg
          class="h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ContractCard > Snapshot Tests > matches snapshot for contract with warning 1`] = `
<div>
  <div
    class="group overflow-hidden rounded-lg border border-slate-700/50 bg-gradient-to-br from-slate-800/50 to-slate-900/50 p-5 backdrop-blur transition-all duration-200 hover:border-slate-600 hover:shadow-lg hover:shadow-violet-500/10"
  >
    <div
      class="mb-4 flex items-start justify-between gap-4"
    >
      <div
        class="flex flex-1 items-start gap-3"
      >
        <div
          class="rounded-lg bg-blue-500/20 p-2"
        >
          <svg
            class="h-5 w-5 text-blue-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          />
        </div>
        <div
          class="flex-1"
        >
          <h3
            class="line-clamp-1 font-semibold text-slate-100"
          >
            测试项目
          </h3>
          <p
            class="mt-0.5 text-sm text-slate-400"
          >
            测试客户
          </p>
          <p
            class="mt-1 text-xs text-slate-500"
          >
            CONTRACT-001
          </p>
        </div>
      </div>
      <div
        class="flex flex-shrink-0 flex-col items-end gap-1"
      >
        <p
          class="text-lg font-bold text-amber-400"
        >
          ¥1,000,000.00
        </p>
        <p
          class="text-xs text-slate-500"
        >
          合同金额
        </p>
      </div>
    </div>
    <div
      class="mb-4 flex items-center justify-between rounded-lg bg-slate-700/20 px-3 py-2"
    >
      <div
        class="flex items-center gap-1.5"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert h-4 w-4 text-amber-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <span
          class="text-xs font-medium text-amber-400"
        >
          有风险
        </span>
      </div>
      <span
        class="text-xs text-slate-400"
      >
        2
        /
        3
         款已到账
      </span>
    </div>
    <div
      class="mb-4 space-y-2"
    >
      <div
        class="flex items-center justify-between"
      >
        <span
          class="text-sm text-slate-400"
        >
          回款进度
        </span>
        <span
          class="text-sm font-medium text-slate-300"
        >
          ¥500,000.00
           /
           
          ¥1,000,000.00
        </span>
      </div>
      <div
        class="h-2 bg-slate-700/50"
        data-testid="progress"
        value="50"
      />
    </div>
    <div
      class="mb-4 space-y-1.5"
    >
      <div
        class="flex items-center justify-between rounded-lg bg-slate-800/30 px-3 py-2.5 text-xs transition-all hover:bg-slate-800/50"
      >
        <div
          class="flex flex-1 items-center gap-3"
        >
          <span
            class="font-medium text-slate-300"
          >
            首付款
          </span>
          <span
            class="text-slate-500"
          >
            |
          </span>
          <span
            class="font-semibold text-slate-200"
          >
            ¥300,000.00
          </span>
        </div>
        <div
          class="text-xs bg-emerald-500/20 text-emerald-400"
          data-testid="badge"
        >
          已到账
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg bg-slate-800/30 px-3 py-2.5 text-xs transition-all hover:bg-slate-800/50"
      >
        <div
          class="flex flex-1 items-center gap-3"
        >
          <span
            class="font-medium text-slate-300"
          >
            进度款
          </span>
          <span
            class="text-slate-500"
          >
            |
          </span>
          <span
            class="font-semibold text-slate-200"
          >
            ¥200,000.00
          </span>
        </div>
        <div
          class="text-xs bg-emerald-500/20 text-emerald-400"
          data-testid="badge"
        >
          已到账
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg bg-slate-800/30 px-3 py-2.5 text-xs transition-all hover:bg-slate-800/50"
      >
        <div
          class="flex flex-1 items-center gap-3"
        >
          <span
            class="font-medium text-slate-300"
          >
            尾款
          </span>
          <span
            class="text-slate-500"
          >
            |
          </span>
          <span
            class="font-semibold text-slate-200"
          >
            ¥500,000.00
          </span>
        </div>
        <div
          class="text-xs bg-slate-700/40 text-slate-400"
          data-testid="badge"
        >
          待回款
        </div>
      </div>
    </div>
    <div
      class="flex flex-wrap gap-2 border-t border-slate-700/30 pt-4"
    >
      <div
        class="text-xs bg-emerald-500/20 text-emerald-400"
        data-testid="badge"
      >
        发票: 
        3
        张
      </div>
      <div
        class="text-xs bg-emerald-500/20 text-emerald-400"
        data-testid="badge"
      >
        ✓ 
        验收:
         
        已完成
      </div>
    </div>
    <div
      class="absolute right-4 top-4 flex gap-1 opacity-0 transition-opacity group-hover:opacity-100"
    >
      <button
        class="h-8 w-8 p-0 text-slate-400 hover:text-slate-100"
        title="查看详情"
        type="button"
      >
        <svg
          class="h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
      </button>
      <button
        class="h-8 w-8 p-0 text-slate-400 hover:text-slate-100"
        title="编辑"
        type="button"
      >
        <svg
          class="h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
      </button>
      <button
        class="h-8 w-8 p-0 text-slate-400 hover:text-slate-100"
        title="下载"
        type="button"
      >
        <svg
          class="h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ContractCard > Snapshot Tests > matches snapshot without actions 1`] = `
<div>
  <div
    class="group overflow-hidden rounded-lg border border-slate-700/50 bg-gradient-to-br from-slate-800/50 to-slate-900/50 p-5 backdrop-blur transition-all duration-200 hover:border-slate-600 hover:shadow-lg hover:shadow-violet-500/10"
  >
    <div
      class="mb-4 flex items-start justify-between gap-4"
    >
      <div
        class="flex flex-1 items-start gap-3"
      >
        <div
          class="rounded-lg bg-blue-500/20 p-2"
        >
          <svg
            class="h-5 w-5 text-blue-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          />
        </div>
        <div
          class="flex-1"
        >
          <h3
            class="line-clamp-1 font-semibold text-slate-100"
          >
            测试项目
          </h3>
          <p
            class="mt-0.5 text-sm text-slate-400"
          >
            测试客户
          </p>
          <p
            class="mt-1 text-xs text-slate-500"
          >
            CONTRACT-001
          </p>
        </div>
      </div>
      <div
        class="flex flex-shrink-0 flex-col items-end gap-1"
      >
        <p
          class="text-lg font-bold text-amber-400"
        >
          ¥1,000,000.00
        </p>
        <p
          class="text-xs text-slate-500"
        >
          合同金额
        </p>
      </div>
    </div>
    <div
      class="mb-4 flex items-center justify-between rounded-lg bg-slate-700/20 px-3 py-2"
    >
      <div
        class="flex items-center gap-1.5"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-check h-4 w-4 text-emerald-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
        <span
          class="text-xs font-medium text-emerald-400"
        >
          正常
        </span>
      </div>
      <span
        class="text-xs text-slate-400"
      >
        2
        /
        3
         款已到账
      </span>
    </div>
    <div
      class="mb-4 space-y-2"
    >
      <div
        class="flex items-center justify-between"
      >
        <span
          class="text-sm text-slate-400"
        >
          回款进度
        </span>
        <span
          class="text-sm font-medium text-slate-300"
        >
          ¥500,000.00
           /
           
          ¥1,000,000.00
        </span>
      </div>
      <div
        class="h-2 bg-slate-700/50"
        data-testid="progress"
        value="50"
      />
    </div>
    <div
      class="mb-4 space-y-1.5"
    >
      <div
        class="flex items-center justify-between rounded-lg bg-slate-800/30 px-3 py-2.5 text-xs transition-all hover:bg-slate-800/50"
      >
        <div
          class="flex flex-1 items-center gap-3"
        >
          <span
            class="font-medium text-slate-300"
          >
            首付款
          </span>
          <span
            class="text-slate-500"
          >
            |
          </span>
          <span
            class="font-semibold text-slate-200"
          >
            ¥300,000.00
          </span>
        </div>
        <div
          class="text-xs bg-emerald-500/20 text-emerald-400"
          data-testid="badge"
        >
          已到账
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg bg-slate-800/30 px-3 py-2.5 text-xs transition-all hover:bg-slate-800/50"
      >
        <div
          class="flex flex-1 items-center gap-3"
        >
          <span
            class="font-medium text-slate-300"
          >
            进度款
          </span>
          <span
            class="text-slate-500"
          >
            |
          </span>
          <span
            class="font-semibold text-slate-200"
          >
            ¥200,000.00
          </span>
        </div>
        <div
          class="text-xs bg-emerald-500/20 text-emerald-400"
          data-testid="badge"
        >
          已到账
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg bg-slate-800/30 px-3 py-2.5 text-xs transition-all hover:bg-slate-800/50"
      >
        <div
          class="flex flex-1 items-center gap-3"
        >
          <span
            class="font-medium text-slate-300"
          >
            尾款
          </span>
          <span
            class="text-slate-500"
          >
            |
          </span>
          <span
            class="font-semibold text-slate-200"
          >
            ¥500,000.00
          </span>
        </div>
        <div
          class="text-xs bg-slate-700/40 text-slate-400"
          data-testid="badge"
        >
          待回款
        </div>
      </div>
    </div>
    <div
      class="flex flex-wrap gap-2 border-t border-slate-700/30 pt-4"
    >
      <div
        class="text-xs bg-emerald-500/20 text-emerald-400"
        data-testid="badge"
      >
        发票: 
        3
        张
      </div>
      <div
        class="text-xs bg-emerald-500/20 text-emerald-400"
        data-testid="badge"
      >
        ✓ 
        验收:
         
        已完成
      </div>
    </div>
  </div>
</div>
`;
